src/objects/mAg_Household__c.object
<CustomObject>
    <description>mAgriculture</description>
    <fields>
        <fullName>AbleFinance_ProductionCostItems__c</fullName>
        <label>AbleFinance[ProductionCostItems</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AblePayLoanOnTime__c</fullName>
        <label>AblePayLoanOnTime</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionWhenFallShortCashFarmOps__c</fullName>
        <label>ActionWhenFallShortCashFarmOps</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionsResolveRank1Challenges__c</fullName>
        <label>ActionsResolveRank1Challenges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionsResolveRank2Challenges__c</fullName>
        <label>ActionsResolveRank2Challenges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionsResolveRank3Challenges__c</fullName>
        <label>ActionsResolveRank3Challenges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalFundingSources__c</fullName>
        <label>AdditionalFundingSources</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AgeLastBirthday__c</fullName>
        <label>Age Last Birthday</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountLoanReceivedRelativeAmountRequest__c</fullName>
        <label>AmountLoanReceivedRelativeAmountRequest</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AmountProductPurchasedCash__c</fullName>
        <label>AmountProductPurchasedCash</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountProductPurchasedNonCash__c</fullName>
        <label>AmountProductPurchasedNonCash</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageSaleAmount__c</fullName>
        <label>Average Sale Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwareFinancialSubsidy__c</fullName>
        <label>AwareFinancialSubsidy</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BenefitsJoiningFarmingGroup__c</fullName>
        <label>Benefits Joining Farming Group</label>
        <picklist>
            <picklistValues>
                <fullName>1. Market ng ani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Teknikal na tulong sa pagsasaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Tulong pinansyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Training/seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Access sa mga kailangan sa pagsasaka (binhi, abono, pestisidyo, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Access sa mga pasilidad (drier, traktura, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Iba pa (pakisulat)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BestSourceFinancialServicesForFarmers__c</fullName>
        <label>BestSourceFinancialServicesForFarmers</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BorrowingCashOrNonCashItems__c</fullName>
        <label>BorrowingCashOrNonCashItems</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChallengesExperienced__c</fullName>
        <label>ChallengesExperienced</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ChallengesRank1__c</fullName>
        <label>ChallengesRank1</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChallengesRank2__c</fullName>
        <label>ChallengesRank2</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChallengesRank3__c</fullName>
        <label>ChallengesRank3</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChildrenAgesBetween6_17__c</fullName>
        <label>Children Ages Between 6_17</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildrenBecomeFarmer__c</fullName>
        <label>ChildrenBecomeFarmer</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CivilStatus__c</fullName>
        <label>Civil Status</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DecisionMakerName__c</fullName>
        <label>Decision Maker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EatLess__c</fullName>
        <label>EatLess</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EatSameThing__c</fullName>
        <label>EatSameThing</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EngageOtherMajor_SourceLivelihood__c</fullName>
        <label>EngageOtherMajor SourceLivelihood</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EverFeelHungry__c</fullName>
        <label>EverFeelHungry</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpensesFarmMgmnt__c</fullName>
        <label>Expenses Farm Mgmnt</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpensesProductionOtherCrop__c</fullName>
        <label>Expenses Production Other Crop</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FamiliarConceptGAP__c</fullName>
        <label>FamiliarConceptGAP</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FamiliarFairtradeCertification__c</fullName>
        <label>FamiliarFairtradeCertification</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FamilyOwnTV_VTR_VHS_VCD_DVDPlayer__c</fullName>
        <label>FamilyOwnTV_VTR_VHS_VCD_DVDPlayer</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FarmFairtradeCertified__c</fullName>
        <label>FarmFairtradeCertified</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FarmingOnlySourceLivelihood__c</fullName>
        <label>FarmingOnlySourceLivelihood</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FemaleHHeadHighestLevelEducation__c</fullName>
        <label>FemaleHHead Highest Level Education</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FemaleInvolvedCropHusbandry__c</fullName>
        <label>Female Involved Crop Husbandry</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <label>Female</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinancialServicesAvailed__c</fullName>
        <label>FinancialServicesAvailed</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FinancialServicesOfferedFinancialAgencie__c</fullName>
        <label>FinancialServicesOfferedFinancialAgencie</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FreqEatLess__c</fullName>
        <label>FreqEatLess</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FreqEatSameThing__c</fullName>
        <label>FreqEatSameThing</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FreqEverFeelHungry__c</fullName>
        <label>FreqEverFeelHungry</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FreqStopEatingWholeDay__c</fullName>
        <label>FreqStopEatingWholeDay</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FreqWasntEnoughFoodDontHaveMoney__c</fullName>
        <label>FreqWasntEnoughFoodDontHaveMoney</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FreqWorriedEndFood__c</fullName>
        <label>FreqWorriedEndFood</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GettingSalarylast12Months__c</fullName>
        <label>GettingSalarylast12Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoingToSchool__c</fullName>
        <label>Going To School</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HarvestTypeSell__c</fullName>
        <label>Harvest Type Sell</label>
        <picklist>
            <picklistValues>
                <fullName>1 por piraso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 por kilo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveAgroDealerTown__c</fullName>
        <label>Have Agro Dealer Town</label>
        <picklist>
            <picklistValues>
                <fullName>1. Mayruon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Wala pa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveCableConnection__c</fullName>
        <label>HaveCableConnection</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveCertificationSeals__c</fullName>
        <label>HaveCertificationSeals</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HaveInternet__c</fullName>
        <label>HaveInternet</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveLandlineTelephone__c</fullName>
        <label>HaveLandlineTelephone</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveMobilePhoneBasicCallText__c</fullName>
        <label>HaveMobilePhoneBasicCallText</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveRadio__c</fullName>
        <label>HaveRadio</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveRefri_Freezer_WashingMachine__c</fullName>
        <label>HaveRefri_Freezer_WashingMachine</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveSalaSet__c</fullName>
        <label>HaveSalaSet</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveSavings__c</fullName>
        <label>HaveSavings</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveSmartTV__c</fullName>
        <label>HaveSmartTV</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveSmartphone__c</fullName>
        <label>HaveSmartphone</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveTVCRTCathodeRayBW__c</fullName>
        <label>HaveTVCRTCathodeRayBW</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveTVColouredCRT__c</fullName>
        <label>HaveTVColouredCRT</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HaveTVFlat__c</fullName>
        <label>HaveTVFlat</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HeardMobileMoneyservices__c</fullName>
        <label>HeardMobileMoneyservices</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HigherFarmIncome__c</fullName>
        <label>Higher Farm Income</label>
        <picklist>
            <picklistValues>
                <fullName>1 Niyog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Parehop lang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Walang ideya/ walang basihan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HighestInterestRate__c</fullName>
        <label>HighestInterestRate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HighestLevelEducation__c</fullName>
        <label>Highest Level Education</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HoseHoldMunicipality__c</fullName>
        <label>HoseHold Municipality</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseHoldHead__c</fullName>
        <label>House Hold Head</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseHoldProvince__c</fullName>
        <label>HouseHold Province</label>
        <picklist>
            <picklistValues>
                <fullName>Davao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quezon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseHoldVillage__c</fullName>
        <description>Village Barangay</description>
        <label>HouseHold Village</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseOuterWallsMaterial__c</fullName>
        <label>HouseOuterWallsMaterial</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseRoofMaterial__c</fullName>
        <label>HouseRoofMaterial</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseholdDecissionMaker__c</fullName>
        <inlineHelpText>Household Decission Maker</inlineHelpText>
        <label>Household Decission Maker</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseholdDidWorkLeast1Hour__c</fullName>
        <label>HouseholdDidWorkLeast1Hour</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseholdHeadName__c</fullName>
        <inlineHelpText>Household Head Name</inlineHelpText>
        <label>Household Head Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseholdLess18Years__c</fullName>
        <label>Household Less 18 Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdMembers6_17GoingSchool__c</fullName>
        <label>Household Members6-17 Going School</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseholdStayFarmingNext10years__c</fullName>
        <label>HouseholdStayFarmingNext10years</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseholdWageEarningMonthly__c</fullName>
        <label>Household Wage Earning Monthly</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowContactStaffAgroOffice__c</fullName>
        <label>HowContactStaffAgroOffice</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowFarAgroDealer__c</fullName>
        <label>How Far Agro Dealer</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowFundIsGiven__c</fullName>
        <label>HowFundIsGiven</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowImportantInteractStaffAgroOffice__c</fullName>
        <label>HowImportantInteractStaffAgroOffice</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowLongNeedPayLoan__c</fullName>
        <label>HowLongNeedPayLoan</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowManyBuyersHaveCacao__c</fullName>
        <label>How Many Buyers Have Cacao</label>
        <picklist>
            <picklistValues>
                <fullName>1 Kadalasan ay mayruon akong ibat-ibang tao o lugar na binebentahan ng aking produkto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Kadalasan ay mayruon akong isa o dalawang tao o pinupuntahan para bentahan ng aking mga produkto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Wala akong regular na tao o lugar na binebentahan ng aking produkto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowManyDroughts__c</fullName>
        <label>HowManyDroughts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowManyFloods__c</fullName>
        <label>HowManyFloods</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowManyLiveHousehold__c</fullName>
        <label>How Many Live Household</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowManyTelephonesCellphonesFamilyOwn__c</fullName>
        <label>HowManyTelephonesCellphonesFamilyOwn</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowManyTimesApplyForLoanFarmOps__c</fullName>
        <label>HowManyTimesApplyForLoanFarmOps</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowManyTimesApplyLoanNotFarming__c</fullName>
        <label>HowManyTimesApplyLoanNotFarming</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowManyTyphoonsPassThroughYear__c</fullName>
        <label>HowManyTyphoonsPassThroughYear</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowNormallySave__c</fullName>
        <label>HowNormallySave</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HowOftenInteractStaffAgroOffice__c</fullName>
        <label>HowOftenInteractStaffAgroOffice</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowOftenMakeMobileMoneyTransactions__c</fullName>
        <label>HowOftenMakeMobileMoneyTransactions</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowOftenObtainInfoNewProdsFarmTech__c</fullName>
        <label>HowOftenObtainInfoNewProdsFarmTech</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowTrueFarmingProvidesNeedsHousehold__c</fullName>
        <label>HowTrueFarmingProvidesNeedsHousehold</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>